fix broken style

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,7 +56,7 @@ body, h1, h2, h3, h4 {
 p.about-me {
 	font-size: 20px;
 	line-height: 35px;
-	padding-top:0px;
+	padding: 0 10px;
 }
 
 .logo {
